--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -707,12 +707,12 @@
     "            tonnetz = np.mean(librosa.feature.tonnetz(y=temp, sr=22050))\n",
     "            tempogram = np.mean(librosa.feature.tempogram(y=temp, sr=sr))\n",
     "            \n",
-    "            data.append([partial,zeros, duration, amplitude_range, average_amp, range_freq, pulse, \n",
-    "                         mfcc, rolloff, mel, contrast, chroma, tempogram, y[1], y[2], y[0], y[5],y[8]])\n",
+    "            data.append([y[8],partial,zeros, duration, amplitude_range, average_amp, range_freq, pulse, \n",
+    "                         mfcc, rolloff, mel, contrast, chroma, tempogram, y[1], y[2], y[0], y[5]])\n",
     "    \n",
-    "    output = pd.DataFrame(data, columns = ['Partials','Zero_Crossings', 'Duration', 'Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec', \n",
+    "    output = pd.DataFrame(data, columns = ['File Name','Partials','Zero_Crossings', 'Duration', 'Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec', \n",
     "                                           'MFCC', 'Spectral Rolloff', 'Melspectrogram','Spectral Contrast',\n",
-    "                                           'Chromagram', 'Tempogram','Sex','Age','Species', 'Call','File Name'])\n",
+    "                                           'Chromagram', 'Tempogram','Sex','Age','Species', 'Call'])\n",
     "    \n",
     "    return output"
    ]
@@ -1535,6 +1535,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>File Name</th>\n",
        "      <th>Partials</th>\n",
        "      <th>Zero_Crossings</th>\n",
        "      <th>Duration</th>\n",
@@ -1552,12 +1553,12 @@
        "      <th>Age</th>\n",
        "      <th>Species</th>\n",
        "      <th>Call</th>\n",
-       "      <th>File Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "      <td>2</td>\n",
        "      <td>706</td>\n",
        "      <td>1</td>\n",
@@ -1575,10 +1576,10 @@
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "      <td>21</td>\n",
        "      <td>3456</td>\n",
        "      <td>4</td>\n",
@@ -1596,10 +1597,10 @@
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "      <td>8</td>\n",
        "      <td>2984</td>\n",
        "      <td>5</td>\n",
@@ -1617,10 +1618,10 @@
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "      <td>11</td>\n",
        "      <td>3108</td>\n",
        "      <td>5</td>\n",
@@ -1638,10 +1639,10 @@
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "      <td>5</td>\n",
        "      <td>1919</td>\n",
        "      <td>3</td>\n",
@@ -1659,7 +1660,6 @@
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Acinonyx_jubatus_S0612_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1684,6 +1684,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
+       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "      <td>0</td>\n",
        "      <td>3432</td>\n",
        "      <td>3</td>\n",
@@ -1701,10 +1702,10 @@
        "      <td>Adult</td>\n",
        "      <td>Domestic Cat</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
+       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "      <td>0</td>\n",
        "      <td>4786</td>\n",
        "      <td>4</td>\n",
@@ -1722,10 +1723,10 @@
        "      <td>Adult</td>\n",
        "      <td>Domestic Cat</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
+       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "      <td>0</td>\n",
        "      <td>3415</td>\n",
        "      <td>3</td>\n",
@@ -1743,10 +1744,10 @@
        "      <td>Adult</td>\n",
        "      <td>Domestic Cat</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
+       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "      <td>0</td>\n",
        "      <td>4505</td>\n",
        "      <td>4</td>\n",
@@ -1764,10 +1765,10 @@
        "      <td>Adult</td>\n",
        "      <td>Domestic Cat</td>\n",
        "      <td>growl</td>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
+       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "      <td>0</td>\n",
        "      <td>3961</td>\n",
        "      <td>3</td>\n",
@@ -1785,7 +1786,6 @@
        "      <td>Adult</td>\n",
        "      <td>Domestic Cat</td>\n",
        "      <td>hiss</td>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1793,18 +1793,31 @@
        "</div>"
       ],
       "text/plain": [
-       "    Partials  Zero_Crossings  Duration  Amp_range   Avg_amp   Freq_range  \\\n",
-       "0          2             706         1   0.083313  0.015951   848.000000   \n",
-       "1         21            3456         4   0.296424  0.035485  3645.500000   \n",
-       "2          8            2984         5   0.171860  0.022913  2181.800000   \n",
-       "3         11            3108         5   0.243933  0.023587  3437.000000   \n",
-       "4          5            1919         3   0.194653  0.029304  2189.000000   \n",
-       "..       ...             ...       ...        ...       ...          ...   \n",
-       "95         0            3432         3   0.012338  0.000780   469.000000   \n",
-       "96         0            4786         4   0.005813  0.000741   463.000000   \n",
-       "97         0            3415         3   0.010675  0.000793   456.666667   \n",
-       "98         0            4505         4   0.011372  0.000706   190.500000   \n",
-       "99         0            3961         3   0.007976  0.000785   109.333333   \n",
+       "                                            File Name  Partials  \\\n",
+       "0                           Acinonyx_jubatus_S0612_02         2   \n",
+       "1                           Acinonyx_jubatus_S0612_02        21   \n",
+       "2                           Acinonyx_jubatus_S0612_02         8   \n",
+       "3                           Acinonyx_jubatus_S0612_02        11   \n",
+       "4                           Acinonyx_jubatus_S0612_02         5   \n",
+       "..                                                ...       ...   \n",
+       "95  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "96  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "97  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "98  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "99  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "\n",
+       "    Zero_Crossings  Duration  Amp_range   Avg_amp   Freq_range  \\\n",
+       "0              706         1   0.083313  0.015951   848.000000   \n",
+       "1             3456         4   0.296424  0.035485  3645.500000   \n",
+       "2             2984         5   0.171860  0.022913  2181.800000   \n",
+       "3             3108         5   0.243933  0.023587  3437.000000   \n",
+       "4             1919         3   0.194653  0.029304  2189.000000   \n",
+       "..             ...       ...        ...       ...          ...   \n",
+       "95            3432         3   0.012338  0.000780   469.000000   \n",
+       "96            4786         4   0.005813  0.000741   463.000000   \n",
+       "97            3415         3   0.010675  0.000793   456.666667   \n",
+       "98            4505         4   0.011372  0.000706   190.500000   \n",
+       "99            3961         3   0.007976  0.000785   109.333333   \n",
        "\n",
        "    Pulses_per_Sec       MFCC  Spectral Rolloff  Melspectrogram  \\\n",
        "0       263.000000  -3.270038       1526.165771        0.101744   \n",
@@ -1832,18 +1845,18 @@
        "98          16.293921    0.819420   0.231850  Pair (Unknown)  Adult   \n",
        "99          16.486288    0.822010   0.200286  Pair (Unknown)  Adult   \n",
        "\n",
-       "         Species   Call                                          File Name  \n",
-       "0     A. jubatus  growl                          Acinonyx_jubatus_S0612_02  \n",
-       "1     A. jubatus    NaN                          Acinonyx_jubatus_S0612_02  \n",
-       "2     A. jubatus  growl                          Acinonyx_jubatus_S0612_02  \n",
-       "3     A. jubatus    NaN                          Acinonyx_jubatus_S0612_02  \n",
-       "4     A. jubatus  growl                          Acinonyx_jubatus_S0612_02  \n",
-       "..           ...    ...                                                ...  \n",
-       "95  Domestic Cat  growl  Felis_silvestris_f_domestica_S0050_01_pair_adu...  \n",
-       "96  Domestic Cat  growl  Felis_silvestris_f_domestica_S0050_01_pair_adu...  \n",
-       "97  Domestic Cat  growl  Felis_silvestris_f_domestica_S0050_01_pair_adu...  \n",
-       "98  Domestic Cat  growl  Felis_silvestris_f_domestica_S0050_01_pair_adu...  \n",
-       "99  Domestic Cat   hiss  Felis_silvestris_f_domestica_S0050_01_pair_adu...  \n",
+       "         Species   Call  \n",
+       "0     A. jubatus  growl  \n",
+       "1     A. jubatus    NaN  \n",
+       "2     A. jubatus  growl  \n",
+       "3     A. jubatus    NaN  \n",
+       "4     A. jubatus  growl  \n",
+       "..           ...    ...  \n",
+       "95  Domestic Cat  growl  \n",
+       "96  Domestic Cat  growl  \n",
+       "97  Domestic Cat  growl  \n",
+       "98  Domestic Cat  growl  \n",
+       "99  Domestic Cat   hiss  \n",
        "\n",
        "[100 rows x 18 columns]"
       ]
