--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -704,15 +704,16 @@
     "            mel = np.mean(librosa.feature.melspectrogram(y=temp, sr=22050))\n",
     "            contrast = np.mean(librosa.feature.spectral_contrast(S=stft, sr=22050))\n",
     "            chroma = np.mean(librosa.feature.chroma_stft(S=stft, sr=22050))\n",
-    "            tonnetz = np.mean(librosa.feature.tonnetz(y=temp, sr=22050))\n",
     "            tempogram = np.mean(librosa.feature.tempogram(y=temp, sr=sr))\n",
+    "            tonnetz = np.mean(librosa.feature.tonnetz(y=temp,sr=sr))\n",
+    "            rms = np.mean(librosa.feature.rms(y=temp))\n",
     "            \n",
-    "            data.append([y[8],partial,zeros, duration, amplitude_range, average_amp, range_freq, pulse, \n",
-    "                         mfcc, rolloff, mel, contrast, chroma, tempogram, y[1], y[2], y[0], y[5]])\n",
+    "            data.append([y[8], duration, zeros, amplitude_range, average_amp, range_freq, pulse, \n",
+    "                         mfcc, rolloff, mel, contrast, chroma, tempogram, tonnetz, partial, rms, y[1], y[2], y[0], y[5]])\n",
     "    \n",
-    "    output = pd.DataFrame(data, columns = ['File Name','Partials','Zero_Crossings', 'Duration', 'Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec', \n",
-    "                                           'MFCC', 'Spectral Rolloff', 'Melspectrogram','Spectral Contrast',\n",
-    "                                           'Chromagram', 'Tempogram','Sex','Age','Species', 'Call'])\n",
+    "    output = pd.DataFrame(data, columns = ['File Name','Duration_in_Sec', 'Zero_Crossings', 'Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec', \n",
+    "                                           'Mean_MFCC', 'Mean_Spectral Rolloff', 'Mean_Melspectrogram','Mean_Spectral Contrast',\n",
+    "                                           'Mean_Chromagram', 'Mean_Tempogram', 'Mean_Tonnetz', 'Partials', 'Mean RMS', 'Sex','Age','Species', 'Call'])\n",
     "    \n",
     "    return output"
    ]
@@ -1536,19 +1537,21 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>File Name</th>\n",
-       "      <th>Partials</th>\n",
+       "      <th>Duration_in_Sec</th>\n",
        "      <th>Zero_Crossings</th>\n",
-       "      <th>Duration</th>\n",
        "      <th>Amp_range</th>\n",
        "      <th>Avg_amp</th>\n",
        "      <th>Freq_range</th>\n",
        "      <th>Pulses_per_Sec</th>\n",
-       "      <th>MFCC</th>\n",
-       "      <th>Spectral Rolloff</th>\n",
-       "      <th>Melspectrogram</th>\n",
-       "      <th>Spectral Contrast</th>\n",
-       "      <th>Chromagram</th>\n",
-       "      <th>Tempogram</th>\n",
+       "      <th>Mean_MFCC</th>\n",
+       "      <th>Mean_Spectral Rolloff</th>\n",
+       "      <th>Mean_Melspectrogram</th>\n",
+       "      <th>Mean_Spectral Contrast</th>\n",
+       "      <th>Mean_Chromagram</th>\n",
+       "      <th>Mean_Tempogram</th>\n",
+       "      <th>Mean_Tonnetz</th>\n",
+       "      <th>Partials</th>\n",
+       "      <th>Mean RMS</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>Species</th>\n",
@@ -1559,19 +1562,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Acinonyx_jubatus_S0612_02</td>\n",
-       "      <td>2</td>\n",
-       "      <td>706</td>\n",
        "      <td>1</td>\n",
+       "      <td>706</td>\n",
        "      <td>0.083313</td>\n",
        "      <td>0.015951</td>\n",
-       "      <td>848.000000</td>\n",
-       "      <td>263.000000</td>\n",
+       "      <td>848.0</td>\n",
+       "      <td>263.00</td>\n",
        "      <td>-3.270038</td>\n",
        "      <td>1526.165771</td>\n",
        "      <td>0.101744</td>\n",
        "      <td>18.307605</td>\n",
        "      <td>0.734437</td>\n",
        "      <td>0.117970</td>\n",
+       "      <td>-0.008915</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.019846</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
@@ -1580,19 +1585,21 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Acinonyx_jubatus_S0612_02</td>\n",
-       "      <td>21</td>\n",
-       "      <td>3456</td>\n",
        "      <td>4</td>\n",
+       "      <td>3456</td>\n",
        "      <td>0.296424</td>\n",
        "      <td>0.035485</td>\n",
-       "      <td>3645.500000</td>\n",
-       "      <td>452.250000</td>\n",
+       "      <td>3645.5</td>\n",
+       "      <td>452.25</td>\n",
        "      <td>-2.419156</td>\n",
        "      <td>1377.502653</td>\n",
        "      <td>0.625990</td>\n",
        "      <td>18.523777</td>\n",
        "      <td>0.682254</td>\n",
        "      <td>0.112089</td>\n",
+       "      <td>-0.009319</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.043695</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
@@ -1601,19 +1608,21 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Acinonyx_jubatus_S0612_02</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2984</td>\n",
        "      <td>5</td>\n",
+       "      <td>2984</td>\n",
        "      <td>0.171860</td>\n",
        "      <td>0.022913</td>\n",
-       "      <td>2181.800000</td>\n",
-       "      <td>308.000000</td>\n",
+       "      <td>2181.8</td>\n",
+       "      <td>308.00</td>\n",
        "      <td>-2.863807</td>\n",
        "      <td>1011.861165</td>\n",
        "      <td>0.214492</td>\n",
        "      <td>18.676903</td>\n",
        "      <td>0.664394</td>\n",
        "      <td>0.211802</td>\n",
+       "      <td>0.006031</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.028763</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
@@ -1622,19 +1631,21 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Acinonyx_jubatus_S0612_02</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3108</td>\n",
        "      <td>5</td>\n",
+       "      <td>3108</td>\n",
        "      <td>0.243933</td>\n",
        "      <td>0.023587</td>\n",
-       "      <td>3437.000000</td>\n",
-       "      <td>314.000000</td>\n",
+       "      <td>3437.0</td>\n",
+       "      <td>314.00</td>\n",
        "      <td>-3.096756</td>\n",
        "      <td>1207.803345</td>\n",
        "      <td>0.279397</td>\n",
        "      <td>18.298732</td>\n",
        "      <td>0.731459</td>\n",
        "      <td>0.147876</td>\n",
+       "      <td>0.003965</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.028987</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
@@ -1643,222 +1654,65 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Acinonyx_jubatus_S0612_02</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1919</td>\n",
        "      <td>3</td>\n",
+       "      <td>1919</td>\n",
        "      <td>0.194653</td>\n",
        "      <td>0.029304</td>\n",
-       "      <td>2189.000000</td>\n",
-       "      <td>331.000000</td>\n",
+       "      <td>2189.0</td>\n",
+       "      <td>331.00</td>\n",
        "      <td>-2.780607</td>\n",
        "      <td>942.326097</td>\n",
        "      <td>0.370894</td>\n",
        "      <td>18.787422</td>\n",
        "      <td>0.632496</td>\n",
        "      <td>0.193519</td>\n",
+       "      <td>0.001523</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.037000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A</td>\n",
        "      <td>A. jubatus</td>\n",
        "      <td>growl</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3432</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.012338</td>\n",
-       "      <td>0.000780</td>\n",
-       "      <td>469.000000</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>-9.981411</td>\n",
-       "      <td>2877.084398</td>\n",
-       "      <td>0.000276</td>\n",
-       "      <td>16.460783</td>\n",
-       "      <td>0.796779</td>\n",
-       "      <td>0.203536</td>\n",
-       "      <td>Pair (Unknown)</td>\n",
-       "      <td>Adult</td>\n",
-       "      <td>Domestic Cat</td>\n",
-       "      <td>growl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4786</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.005813</td>\n",
-       "      <td>0.000741</td>\n",
-       "      <td>463.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-10.122288</td>\n",
-       "      <td>2548.510601</td>\n",
-       "      <td>0.000211</td>\n",
-       "      <td>16.301186</td>\n",
-       "      <td>0.798137</td>\n",
-       "      <td>0.239915</td>\n",
-       "      <td>Pair (Unknown)</td>\n",
-       "      <td>Adult</td>\n",
-       "      <td>Domestic Cat</td>\n",
-       "      <td>growl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3415</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.010675</td>\n",
-       "      <td>0.000793</td>\n",
-       "      <td>456.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>-10.044185</td>\n",
-       "      <td>2295.190993</td>\n",
-       "      <td>0.000257</td>\n",
-       "      <td>16.541403</td>\n",
-       "      <td>0.774528</td>\n",
-       "      <td>0.196576</td>\n",
-       "      <td>Pair (Unknown)</td>\n",
-       "      <td>Adult</td>\n",
-       "      <td>Domestic Cat</td>\n",
-       "      <td>growl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4505</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.011372</td>\n",
-       "      <td>0.000706</td>\n",
-       "      <td>190.500000</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>-10.344813</td>\n",
-       "      <td>2570.541682</td>\n",
-       "      <td>0.000220</td>\n",
-       "      <td>16.293921</td>\n",
-       "      <td>0.819420</td>\n",
-       "      <td>0.231850</td>\n",
-       "      <td>Pair (Unknown)</td>\n",
-       "      <td>Adult</td>\n",
-       "      <td>Domestic Cat</td>\n",
-       "      <td>growl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Felis_silvestris_f_domestica_S0050_01_pair_adu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3961</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.007976</td>\n",
-       "      <td>0.000785</td>\n",
-       "      <td>109.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>-10.089475</td>\n",
-       "      <td>3107.738131</td>\n",
-       "      <td>0.000249</td>\n",
-       "      <td>16.486288</td>\n",
-       "      <td>0.822010</td>\n",
-       "      <td>0.200286</td>\n",
-       "      <td>Pair (Unknown)</td>\n",
-       "      <td>Adult</td>\n",
-       "      <td>Domestic Cat</td>\n",
-       "      <td>hiss</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            File Name  Partials  \\\n",
-       "0                           Acinonyx_jubatus_S0612_02         2   \n",
-       "1                           Acinonyx_jubatus_S0612_02        21   \n",
-       "2                           Acinonyx_jubatus_S0612_02         8   \n",
-       "3                           Acinonyx_jubatus_S0612_02        11   \n",
-       "4                           Acinonyx_jubatus_S0612_02         5   \n",
-       "..                                                ...       ...   \n",
-       "95  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
-       "96  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
-       "97  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
-       "98  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
-       "99  Felis_silvestris_f_domestica_S0050_01_pair_adu...         0   \n",
+       "                   File Name  Duration_in_Sec  Zero_Crossings  Amp_range  \\\n",
+       "0  Acinonyx_jubatus_S0612_02                1             706   0.083313   \n",
+       "1  Acinonyx_jubatus_S0612_02                4            3456   0.296424   \n",
+       "2  Acinonyx_jubatus_S0612_02                5            2984   0.171860   \n",
+       "3  Acinonyx_jubatus_S0612_02                5            3108   0.243933   \n",
+       "4  Acinonyx_jubatus_S0612_02                3            1919   0.194653   \n",
        "\n",
-       "    Zero_Crossings  Duration  Amp_range   Avg_amp   Freq_range  \\\n",
-       "0              706         1   0.083313  0.015951   848.000000   \n",
-       "1             3456         4   0.296424  0.035485  3645.500000   \n",
-       "2             2984         5   0.171860  0.022913  2181.800000   \n",
-       "3             3108         5   0.243933  0.023587  3437.000000   \n",
-       "4             1919         3   0.194653  0.029304  2189.000000   \n",
-       "..             ...       ...        ...       ...          ...   \n",
-       "95            3432         3   0.012338  0.000780   469.000000   \n",
-       "96            4786         4   0.005813  0.000741   463.000000   \n",
-       "97            3415         3   0.010675  0.000793   456.666667   \n",
-       "98            4505         4   0.011372  0.000706   190.500000   \n",
-       "99            3961         3   0.007976  0.000785   109.333333   \n",
+       "    Avg_amp  Freq_range  Pulses_per_Sec  Mean_MFCC  Mean_Spectral Rolloff  \\\n",
+       "0  0.015951       848.0          263.00  -3.270038            1526.165771   \n",
+       "1  0.035485      3645.5          452.25  -2.419156            1377.502653   \n",
+       "2  0.022913      2181.8          308.00  -2.863807            1011.861165   \n",
+       "3  0.023587      3437.0          314.00  -3.096756            1207.803345   \n",
+       "4  0.029304      2189.0          331.00  -2.780607             942.326097   \n",
        "\n",
-       "    Pulses_per_Sec       MFCC  Spectral Rolloff  Melspectrogram  \\\n",
-       "0       263.000000  -3.270038       1526.165771        0.101744   \n",
-       "1       452.250000  -2.419156       1377.502653        0.625990   \n",
-       "2       308.000000  -2.863807       1011.861165        0.214492   \n",
-       "3       314.000000  -3.096756       1207.803345        0.279397   \n",
-       "4       331.000000  -2.780607        942.326097        0.370894   \n",
-       "..             ...        ...               ...             ...   \n",
-       "95        1.333333  -9.981411       2877.084398        0.000276   \n",
-       "96        0.000000 -10.122288       2548.510601        0.000211   \n",
-       "97        0.333333 -10.044185       2295.190993        0.000257   \n",
-       "98        0.750000 -10.344813       2570.541682        0.000220   \n",
-       "99        0.666667 -10.089475       3107.738131        0.000249   \n",
+       "   Mean_Melspectrogram  Mean_Spectral Contrast  Mean_Chromagram  \\\n",
+       "0             0.101744               18.307605         0.734437   \n",
+       "1             0.625990               18.523777         0.682254   \n",
+       "2             0.214492               18.676903         0.664394   \n",
+       "3             0.279397               18.298732         0.731459   \n",
+       "4             0.370894               18.787422         0.632496   \n",
        "\n",
-       "    Spectral Contrast  Chromagram  Tempogram             Sex    Age  \\\n",
-       "0           18.307605    0.734437   0.117970             NaN      A   \n",
-       "1           18.523777    0.682254   0.112089             NaN      A   \n",
-       "2           18.676903    0.664394   0.211802             NaN      A   \n",
-       "3           18.298732    0.731459   0.147876             NaN      A   \n",
-       "4           18.787422    0.632496   0.193519             NaN      A   \n",
-       "..                ...         ...        ...             ...    ...   \n",
-       "95          16.460783    0.796779   0.203536  Pair (Unknown)  Adult   \n",
-       "96          16.301186    0.798137   0.239915  Pair (Unknown)  Adult   \n",
-       "97          16.541403    0.774528   0.196576  Pair (Unknown)  Adult   \n",
-       "98          16.293921    0.819420   0.231850  Pair (Unknown)  Adult   \n",
-       "99          16.486288    0.822010   0.200286  Pair (Unknown)  Adult   \n",
+       "   Mean_Tempogram  Mean_Tonnetz  Partials  Mean RMS  Sex Age     Species  \\\n",
+       "0        0.117970     -0.008915         2  0.019846  NaN   A  A. jubatus   \n",
+       "1        0.112089     -0.009319        21  0.043695  NaN   A  A. jubatus   \n",
+       "2        0.211802      0.006031         8  0.028763  NaN   A  A. jubatus   \n",
+       "3        0.147876      0.003965        11  0.028987  NaN   A  A. jubatus   \n",
+       "4        0.193519      0.001523         5  0.037000  NaN   A  A. jubatus   \n",
        "\n",
-       "         Species   Call  \n",
-       "0     A. jubatus  growl  \n",
-       "1     A. jubatus    NaN  \n",
-       "2     A. jubatus  growl  \n",
-       "3     A. jubatus    NaN  \n",
-       "4     A. jubatus  growl  \n",
-       "..           ...    ...  \n",
-       "95  Domestic Cat  growl  \n",
-       "96  Domestic Cat  growl  \n",
-       "97  Domestic Cat  growl  \n",
-       "98  Domestic Cat  growl  \n",
-       "99  Domestic Cat   hiss  \n",
-       "\n",
-       "[100 rows x 18 columns]"
+       "    Call  \n",
+       "0  growl  \n",
+       "1    NaN  \n",
+       "2  growl  \n",
+       "3    NaN  \n",
+       "4  growl  "
       ]
      },
      "execution_count": 27,
@@ -1867,7 +1721,7 @@
     }
    ],
    "source": [
-    "features_dataframe.head(100)"
+    "features_dataframe.head()"
    ]
   },
   {
