--- a/Modeling-Pantherinae July 2022.ipynb
+++ b/Modeling-Pantherinae July 2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "[125 rows x 19 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[125 rows x 19 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
        "[125 rows x 21 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "(125, 21)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1311,28 +1311,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of possible accuracy: [0.5714285714285714, 0.5714285714285714, 0.8571428571428571, 1.0, 0.8571428571428571, 0.8333333333333334, 0.8333333333333334, 1.0, 1.0, 1.0, 1.0, 1.0, 0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.5]\n",
+      "List of possible accuracy: [0.6153846153846154, 0.9230769230769231, 0.8461538461538461, 0.7692307692307693, 1.0, 1.0, 0.75, 0.6666666666666666, 0.75, 0.4166666666666667]\n",
       "\n",
       "Maximum Accuracy: 100.0 %\n",
       "\n",
-      "Minimum Accuracy: 50.0 %\n",
+      "Minimum Accuracy: 41.66666666666667 %\n",
       "\n",
-      "Average Accuracy: 80.95238095238095 %\n",
+      "Average Accuracy: 77.37179487179488 %\n",
       "\n",
-      "Standard Deviation: 0.16477624635164403\n"
+      "Standard Deviation: 0.18108391312500854\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "skf = StratifiedKFold(n_splits=20)\n",
+    "skf = StratifiedKFold(n_splits=10)\n",
     "model = XGBClassifier(n_estimators=1200, objective='multi:softprob',\n",
     "    max_depth=9,\n",
     "    learning_rate=0.01,\n",
@@ -1374,27 +1374,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of possible accuracy: [0.5714285714285714, 0.7142857142857143, 0.42857142857142855, 0.5714285714285714, 0.7142857142857143, 0.8333333333333334, 1.0, 1.0, 0.6666666666666666, 1.0, 1.0, 0.8333333333333334, 1.0, 1.0, 0.5, 1.0, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 1.0]\n",
+      "List of possible accuracy: [0.6153846153846154, 0.5384615384615384, 0.7692307692307693, 1.0, 0.8461538461538461, 0.8333333333333334, 0.9166666666666666, 0.75, 0.75, 0.8333333333333334]\n",
       "\n",
       "Maximum Accuracy: 100.0 %\n",
       "\n",
-      "Minimum Accuracy: 42.857142857142854 %\n",
+      "Minimum Accuracy: 53.84615384615385 %\n",
       "\n",
-      "Average Accuracy: 81.66666666666667 %\n",
+      "Average Accuracy: 78.52564102564102 %\n",
       "\n",
-      "Standard Deviation: 0.18986430541180485\n"
+      "Standard Deviation: 0.13508093422733863\n"
      ]
     }
    ],
    "source": [
-    "skf = StratifiedKFold(n_splits=20)\n",
+    "skf = StratifiedKFold(n_splits=10)\n",
     "model = XGBClassifier(n_estimators=1200, objective='multi:softprob',\n",
     "    max_depth=9,\n",
     "    learning_rate=0.01,\n",
